--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Google AI Studio App</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+html
+<!DOCTYPE html>
+<html>
+<head>
+    <title>IXL | Dashboard</title>
+    <link rel="icon" href="https://www.ixl.com">
+    <style>
+        body { background: #121212; color: white; font-family: sans-serif; text-align: center; }
+        .header { background: #1f1f1f; padding: 20px; border-bottom: 2px solid #333; }
+        .game-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); gap: 15px; padding: 20px; }
+        .game-card { background: #222; padding: 15px; border-radius: 8px; border: 1px solid #444; }
+        .roblox-btn { background: #e2231a; color: white; padding: 15px 30px; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; margin-top: 20px; }
+    </style>
+</head>
+<body>
+    <div class="header">
+        <h1>IXL Math and ELA Dashboard</h1>
+        <input type="text" placeholder="Search 600+ games..." style="width:50%; padding:10px;">
+        <br>
+        <button class="roblox-btn" onclick="window.location.href='https://now.gg'">PLAY ROBLOX</button>
+    </div>
+    <div class="game-grid">
+        <div class="game-card">Loading Games...</div>
+    </div>
+</body>
 </html>
-
